--- a/public/pages/classifica.html
+++ b/public/pages/classifica.html
@@ -9,9 +9,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png">
   </head>
   <body>
-    <!-- Navbar -->
     <nav class="navbar">
       <div class="navbar-container">
         <a href="/" class="navbar-brand">
@@ -34,7 +34,6 @@
             >
         </div>
         <div class="navbar-login">
-          <!-- Populated by JS when logged in -->
         </div>
         
         <div class="navbar-toggle" id="mobile-menu">
@@ -48,7 +47,6 @@
     <div class="container" style="padding-top: 120px; padding-bottom: 50px">
       <h1 class="section-title">Classifica Ufficiale</h1>
 
-      <!-- Top 3 Podium -->
       <div class="grid-3" style="align-items: flex-end">
         <div class="card rank-2">
           <div class="card-icon">
@@ -73,7 +71,6 @@
         </div>
       </div>
 
-      <!-- Full Table -->
       <div class="admin-card" style="margin-top: 3rem">
         <div class="table-responsive">
           <table class="admin-table">
@@ -114,7 +111,6 @@
       </div>
     </div>
 
-    <!-- Footer -->
     <footer>
       <div class="container">
         <div class="footer-content">
@@ -157,5 +153,6 @@
     </footer>
 
     <script src="../js/navbar.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
