--- a/public/pages/tornei.html
+++ b/public/pages/tornei.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tornei - Astral Cup</title>
     <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
   </head>
   <body>
-    <!-- Navbar -->
     <nav class="navbar">
       <div class="navbar-container">
         <a href="/" class="navbar-brand">
@@ -34,7 +34,6 @@
             >
         </div>
         <div class="navbar-login">
-          <!-- Populated by JS when logged in -->
         </div>
         
         <div class="navbar-toggle" id="mobile-menu">
@@ -49,48 +48,9 @@
       <h1 class="section-title">Tornei Disponibili</h1>
 
       <div class="grid-3">
-        <!-- Torneo 1 -->
-        <div class="card">
-          <div class="card-icon"><i class="fas fa-gamepad"></i></div>
-          <h3>Astral Weekly #45</h3>
-          <p style="margin: 0.5rem 0">Data: 15/11/2023 - 15:00</p>
-          <p style="margin-bottom: 1.5rem">Montepremi: <strong>50€</strong></p>
-          <p style="margin-bottom: 1.5rem">
-            Stato: <span class="status-open">Aperto</span>
-          </p>
-          <a href="#" class="btn-visit">Iscriviti Ora</a>
-        </div>
 
-        <!-- Torneo 2 -->
-        <div class="card">
-          <div class="card-icon"><i class="fas fa-trophy"></i></div>
-          <h3>Monthly Cup November</h3>
-          <p style="margin: 0.5rem 0">Data: 30/11/2023 - 16:00</p>
-          <p style="margin-bottom: 1.5rem">Montepremi: <strong>200€</strong></p>
-          <p style="margin-bottom: 1.5rem">
-            Stato: <span class="status-open">Aperto</span>
-          </p>
-          <a href="#" class="btn-visit">Iscriviti Ora</a>
-        </div>
-
-        <!-- Torneo 3 -->
-        <div class="card" style="opacity: 0.7">
-          <div class="card-icon"><i class="fas fa-lock"></i></div>
-          <h3>Astral Weekly #44</h3>
-          <p style="margin: 0.5rem 0">Data: 08/11/2023</p>
-          <p style="margin-bottom: 1.5rem">
-            Stato: <span class="status-closed">Concluso</span>
-          </p>
-          <a
-            href="#"
-            class="btn-visit"
-            style="border-color: #64748b; color: #64748b"
-            >Vedi Risultati</a
-          >
-        </div>
       </div>
     </div>
-    <!-- Footer -->
     <footer>
       <div class="container">
         <div class="footer-content">
@@ -132,5 +92,6 @@
       </div>
     </footer>
     <script src="../js/navbar.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
