--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png">
+    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png" />
   </head>
   <body>
     <nav class="navbar">
@@ -21,8 +21,12 @@
 
         <div class="navbar-content">
           <ul class="navbar-menu">
-            <li><a href="./adminpanel/classifica.html">Gestione Classifica</a></li>
-            <li><a href="./adminpanel/iscrizioni.html">Gestione Iscrizioni</a></li>
+            <li>
+              <a href="./adminpanel/classifica.html">Gestione Classifica</a>
+            </li>
+            <li>
+              <a href="./adminpanel/iscrizioni.html">Gestione Iscrizioni</a>
+            </li>
             <li><a href="./adminpanel/tornei.html">Gestione Tornei</a></li>
             <li><a href="./adminpanel/user.html">Gestione Utenti</a></li>
           </ul>
@@ -31,8 +35,7 @@
               ><i class="fab fa-discord"></i> Login</a
             >
           </div>
-          <div class="navbar-login">
-          </div>
+          <div class="navbar-login"></div>
         </div>
 
         <div class="navbar-toggle" id="mobile-menu">
@@ -106,9 +109,7 @@
         <h2><i class="fas fa-list"></i> Lista Tornei</h2>
         <div class="table-responsive">
           <table class="admin-table">
-            
-            <tbody id="admin-tournaments-body">
-            </tbody>
+            <tbody id="admin-tournaments-body"></tbody>
           </table>
         </div>
       </section>
