--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -59,6 +59,17 @@
               <input type="text" placeholder="Es. Astral Weekly #45" required />
             </div>
           </div>
+          <div class="form-group">
+            <label>Formato</label>
+            <div class="input-group">
+              <i class="fas fa-users"></i>
+              <select id="tournament-format" style="width: 100%; background: transparent; border: none; color: #fff; outline: none; padding: 5px;">
+                <option value="solo" style="background: #1e293b;">Solo (1v1)</option>
+                <option value="duo" style="background: #1e293b;">Duo (2v2)</option>
+                <option value="trio" style="background: #1e293b;">Trio (3v3)</option>
+              </select>
+            </div>
+          </div>
           <div class="form-row">
             <div class="form-group">
               <label>Data e Ora</label>
