--- a/public/pages/memories.html
+++ b/public/pages/memories.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memories - Astral Cup</title>
     <link rel="stylesheet" href="../styles/main.css" />
-    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png">
+    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -32,8 +32,7 @@
               ><i class="fab fa-discord"></i> Login</a
             >
           </div>
-          <div class="navbar-login">
-          </div>
+          <div class="navbar-login"></div>
         </div>
 
         <div class="navbar-toggle" id="mobile-menu">
@@ -58,8 +57,16 @@
         Cup.
       </p>
 
-      <div class="grid-3">
+      <div
+        class="section-header-flex"
+        style="margin-bottom: 2rem; justify-content: flex-end"
+      >
+        <button id="add-memory-btn" class="btn-primary">
+          <i class="fas fa-plus"></i> Nuova Memory
+        </button>
       </div>
+
+      <div class="grid-3"></div>
     </div>
 
     <!-- Footer -->
